<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"

            android:gravity="center_vertical"
            android:text="@string/txt_profile"
            android:textColor="@color/accent_material_light"
            android:textSize="@dimen/d_view_text_size" />

        <View
            android:id="@+id/view_sep0"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_profile"
            android:background="@color/color_sep_view" />

        <TextView
            android:id="@+id/tv_first_day"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/d_view_height"
            android:layout_below="@+id/view_sep0"
            android:gravity="center_vertical"
            android:text="@string/txt_first_day"
            android:textColor="@color/color_app_green"
            android:textSize="@dimen/d_view_text_size" />

        <TextView
            android:id="@+id/tv_first_day_res"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tv_first_day"
            android:gravity="center_vertical|right"
            android:text="@string/txt_monday"
            android:layout_below="@+id/view_sep0"
            android:textSize="@dimen/d_view_text_size" />

        <View
            android:id="@+id/view_sep1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_first_day"
            android:background="@color/color_sep_view" />


        <TextView
            android:id="@+id/tv_hourly_rate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/d_view_height"
            android:layout_below="@+id/view_sep1"
            android:gravity="center_vertical"
            android:text="@string/txt_hourly_rate"
            android:textColor="@color/color_app_green"
            android:textSize="@dimen/d_view_text_size" />

        <TextView
            android:id="@+id/tv_hourly_rate_res"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/view_sep1"
            android:layout_toRightOf="@+id/tv_hourly_rate"
            android:gravity="center_vertical|right"
            android:text="@string/txt_10"
            android:textSize="@dimen/d_view_text_size" />


        <View
            android:id="@+id/view_sep2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_hourly_rate"
            android:background="@color/color_sep_view" />

        <TextView
            android:id="@+id/tv_pomodoro_timer"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/d_view_height"
            android:layout_below="@+id/view_sep2"
            android:gravity="center_vertical"
            android:text="@string/txt_pomodoro_meter"
            android:textColor="@color/color_app_green"
            android:textSize="@dimen/d_view_text_size" />

        <TextView
            android:id="@+id/tv_pomodoro_timer_res"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/view_sep2"
            android:layout_toRightOf="@+id/tv_pomodoro_timer"
            android:gravity="center_vertical|right"
            android:text="@string/txt_25m_5m"
            android:textSize="@dimen/d_view_text_size" />

        <View
            android:id="@+id/view_sep3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_pomodoro_timer"
            android:background="@color/color_sep_view" />

        <TextView
            android:id="@+id/tv_change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:layout_below="@+id/view_sep3"
            android:gravity="center_vertical"
            android:text="@string/txt_change_password"
            android:textColor="@color/accent_material_light"
            android:textSize="@dimen/d_view_text_size" />
        <View
            android:id="@+id/view_sep4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_change_password"
            android:background="@color/color_sep_view" />

        <TextView
            android:id="@+id/tv_completed_task"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:layout_below="@+id/view_sep4"
            android:gravity="center_vertical"
            android:text="@string/txt_complete_task"
            android:textColor="@color/accent_material_light"
            android:textSize="@dimen/d_view_text_size" />
    </RelativeLayout>
</LinearLayout>