<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:id="@+id/ll_add_points"
    android:visibility="gone"
    android:layout_height="wrap_content"
    android:background="@color/color_dialog_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <app.lifewin.ui.views.CustomEditText
        android:id="@+id/ed_add_points"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_view_height"
        android:background="@color/color_white"
        android:hint="@string/hint_add_points"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/color_black"
        android:paddingRight="10dp"
        android:singleLine="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="5dp">

        <TextView
            android:id="@+id/tv_2_points"
            android:layout_width="43dp"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/s_rectangle_btn"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="5dp"
            android:text="@string/txt_2"
            android:textColor="@color/color_white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_5_points"
            android:layout_width="43dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_2_points"
            android:background="@drawable/s_rectangle_btn"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="5dp"
            android:text="@string/txt_5"
            android:textColor="@color/color_white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_10_points"
            android:layout_width="43dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_5_points"
            android:background="@drawable/s_rectangle_btn"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="5dp"
            android:text="@string/txt_10"
            android:textColor="@color/color_white"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_view_height"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="@dimen/d_bottom_bar_text_size"
            android:textColor="@color/color_white"
            android:text="@string/txt_ok" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/d_bottom_bar_text_size"
            android:textColor="@color/color_white"
            android:gravity="right|center_vertical"
            android:text="@string/txt_cap_cancel" />

    </LinearLayout>
</LinearLayout>
