<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_header_view_height"
        android:background="@color/color_app_green">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:scaleType="center"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_header_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_header_view_height"
            android:layout_toRightOf="@+id/iv_back"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/txt_change_password"
            android:textColor="@color/color_white"
            android:textSize="@dimen/d_bottom_bar_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:gravity="center_vertical"
            android:text="@string/txt_current_password"
            android:textColor="@color/color_app_green"
            android:textSize="@dimen/d_view_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_sep_view" />

        <app.lifewin.ui.views.CustomEditText
            android:id="@+id/ed_cpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_password"
            android:background="@null"
            android:hint="@string/hint_login_enter_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/color_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_sep_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:gravity="center_vertical"
            android:text="@string/txt_new_password"
            android:textColor="@color/color_app_green"
            android:textSize="@dimen/d_view_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_sep_view" />

        <app.lifewin.ui.views.CustomEditText
            android:id="@+id/ed_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_password"
            android:background="@null"
            android:hint="@string/hint_enter_new_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/color_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_sep_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:gravity="center_vertical"
            android:text="@string/txt_confirm_password"
            android:textColor="@color/color_app_green"
            android:textSize="@dimen/d_view_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_sep_view" />

        <app.lifewin.ui.views.CustomEditText
            android:id="@+id/ed_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_password"
            android:background="@null"
            android:hint="@string/hint_re_enter_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/color_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_sep_view" />
    </LinearLayout>

    <TextView
        android:id="@id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:background="@color/color_app_green"
        android:gravity="right|center_vertical"
        android:paddingRight="80dp"
        android:text="@string/txt_done"
        android:textColor="@color/color_white"
        android:textSize="@dimen/d_bottom_bar_text_size" />
</RelativeLayout>