<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/rl_parent"
    android:background="@color/color_semi_black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@color/color_dialog_bg"

        android:orientation="vertical">

        <TextView
            android:id="@+id/txtFirstDayTit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_first_day"
            android:gravity="left"
            android:paddingLeft="25dp"
            android:textColor="@color/color_app_green"
            android:textSize="@dimen/d_dialog_header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSaturdayTit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txtFirstDayTit"
            android:text="@string/txt_saturday"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/switch_thumb_normal_material_light"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtSundayTit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txtFirstDayTit"
            android:text="@string/txt_sunday"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:textColor="@color/switch_thumb_normal_material_light"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtMondayTit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txtFirstDayTit"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:text="@string/txt_monday"
            android:paddingLeft="25dp"
            android:textColor="@color/switch_thumb_normal_material_light"
            android:textSize="20dp" />

    </LinearLayout>
</RelativeLayout>