<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/color_semi_black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@color/color_dialog_bg"
        android:gravity="center_horizontal"

        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/txt_first_day"
            android:textColor="@color/color_app_green"
            android:textSize="@dimen/d_dialog_header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_below="@+id/txtFirstDayTit"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/txt_saturday"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/switch_thumb_normal_material_light"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@color/color_app_green"
                android:text="@string/txt_cancel"
                android:textColor="@color/color_white"
                android:textSize="@dimen/d_bottom_bar_text_size" />
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="@color/color_app_green"
                android:text="@string/txt_ok"
                android:textColor="@color/color_white"
                android:textSize="@dimen/d_bottom_bar_text_size" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>