<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <TextView
        android:id="@+id/tv_header_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_header_view_height"
        android:background="@color/color_app_green"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/txt_forgot_password"
        android:textColor="@color/color_white"
        android:textSize="@dimen/d_bottom_bar_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_header_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:gravity="center_vertical"
            android:text="@string/txt_email"
            android:textColor="@color/color_app_green"
            android:textSize="@dimen/d_view_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_sep_view" />

        <app.lifewin.ui.views.CustomEditText
            android:id="@+id/ed_email_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view_height"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/hint_login_email_id"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/color_black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_sep_view" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:background="@color/color_app_green"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_centerVertical="true"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:scaleType="center"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_back" />
        <TextView
            android:id="@id/tv_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:paddingRight="80dp"
            android:text="@string/txt_next"
            android:textColor="@color/color_white"
            android:textSize="@dimen/d_bottom_bar_text_size" />

    </LinearLayout>

</RelativeLayout>
